Input Text Area Sample.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,5 +9,7 @@
         Hello in Tutorial
         <br/>
         <h:link outcome="inputText" value="Input text example"/>
+          <br/>
+        <h:link outcome="inputTextArea" value="Input text area example"/>
     </h:body>
 </html>
