--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,5 +11,7 @@
         <h:link outcome="inputText" value="Input text example"/>
           <br/>
         <h:link outcome="inputTextArea" value="Input text area example"/>
+                  <br/>
+        <h:link outcome="growl" value="Growl example"/>
     </h:body>
 </html>
