--- a/src/main/webapp/inputTextArea.xhtml
+++ b/src/main/webapp/inputTextArea.xhtml
@@ -9,7 +9,7 @@
         <h:form>
         <h:outputText value="Input text area sample"/>
         <br/>
-        <p:inputTextarea rows="10" cols="50" minQueryLength="3" completeMethod="#{ripples.completeArea}" queryDelay="1000" />
+        <p:inputTextarea rows="10" cols="50" minQueryLength="3" completeMethod="#{ripples.completeArea}" queryDelay="1000" autoResize="false" />
         <br/>
         <p:inputTextarea rows="10" cols="50" counter="display" maxlength="10" counterTemplate="{0} remaing left" />
         <br/>
