Select Boolean Button example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -13,5 +13,7 @@
         <h:link outcome="inputTextArea" value="Input text area example"/>
                   <br/>
         <h:link outcome="growl" value="Growl example"/>
+                          <br/>
+        <h:link outcome="selectbooleanbutton" value="Select Boolean Button example"/>
     </h:body>
 </html>
