Select Boolean Checkbox example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,11 +9,14 @@
         Hello in Tutorial
         <br/>
         <h:link outcome="inputText" value="Input text example"/>
-          <br/>
+        <br/>
         <h:link outcome="inputTextArea" value="Input text area example"/>
-                  <br/>
+        <br/>
         <h:link outcome="growl" value="Growl example"/>
-                          <br/>
+        <br/>
         <h:link outcome="selectbooleanbutton" value="Select Boolean Button example"/>
+        <br/>
+        <h:link outcome="selectbooleancheckbox" value="Select Boolean Checkbox example"/>
+
     </h:body>
 </html>
