Select One Button example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -17,6 +17,8 @@
         <h:link outcome="selectbooleanbutton" value="Select Boolean Button example"/>
         <br/>
         <h:link outcome="selectbooleancheckbox" value="Select Boolean Checkbox example"/>
+                <br/>
+        <h:link outcome="selectOneButton" value="Select One Button example"/>
 
     </h:body>
 </html>
