Select One Radio example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -19,6 +19,8 @@
         <h:link outcome="selectbooleancheckbox" value="Select Boolean Checkbox example"/>
                 <br/>
         <h:link outcome="selectOneButton" value="Select One Button example"/>
+                  <br/>
+        <h:link outcome="selectOneRadio" value="Select One Radio example"/>
 
     </h:body>
 </html>
