Select Checkbox Menu example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -21,6 +21,8 @@
         <h:link outcome="selectOneButton" value="Select One Button example"/>
                   <br/>
         <h:link outcome="selectOneRadio" value="Select One Radio example"/>
+                          <br/>
+        <h:link outcome="selectCheckboxMenu" value="Select Checkbox Menu example"/>
 
     </h:body>
 </html>
