--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -23,6 +23,8 @@
         <h:link outcome="selectOneRadio" value="Select One Radio example"/>
                           <br/>
         <h:link outcome="selectCheckboxMenu" value="Select Checkbox Menu example"/>
+                                  <br/>
+        <h:link outcome="editor" value="Editor example"/>
 
     </h:body>
 </html>
