Area Chart example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -25,6 +25,8 @@
         <h:link outcome="selectCheckboxMenu" value="Select Checkbox Menu example"/>
                                   <br/>
         <h:link outcome="editor" value="Editor example"/>
+                                          <br/>
+        <h:link outcome="areaChart" value="Area Chart example"/>
 
     </h:body>
 </html>
