Bar Chart example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -27,6 +27,8 @@
         <h:link outcome="editor" value="Editor example"/>
                                           <br/>
         <h:link outcome="areaChart" value="Area Chart example"/>
+                                                  <br/>
+        <h:link outcome="barChart" value="Bar Chart example"/>
 
     </h:body>
 </html>
