Bubble Chart example.

--- a/src/main/webapp/bubbleChart.xhtml
+++ b/src/main/webapp/bubbleChart.xhtml
@@ -4,14 +4,14 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Bar Chart</title>    
+        <title>Bubble Chart</title>    
     </h:head>
     <h:body>
-        Bar Chart Example
+        Bubble Chart Example
         <br/>
         <h:form>
-            <p:chart type="bar" model="#{barChart.barChartModel}" style="height: 300px" />
-            <p:chart type="bar" model="#{barChart.horizontalBarChartModel}" style="height: 300px" />
+            <p:chart type="bubble" model="#{bubbleChart.bubbleChartModel}" style="height: 300px" />
+            <p:chart type="bubble" model="#{bubbleChart.bubbleChartModel2}" style="height: 300px" />
         </h:form>
     </h:body>
 </html>
