--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -29,6 +29,8 @@
         <h:link outcome="areaChart" value="Area Chart example"/>
                                                   <br/>
         <h:link outcome="barChart" value="Bar Chart example"/>
+                                                          <br/>
+        <h:link outcome="bubbleChart" value="Bubble Chart example"/>
 
     </h:body>
 </html>
