Donut Chart example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -31,6 +31,8 @@
         <h:link outcome="barChart" value="Bar Chart example"/>
                                                           <br/>
         <h:link outcome="bubbleChart" value="Bubble Chart example"/>
+        <br/>
+        <h:link outcome="donutChart" value="Donut Chart example"/>
 
     </h:body>
 </html>
