Bread Crumb example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -33,6 +33,8 @@
         <h:link outcome="bubbleChart" value="Bubble Chart example"/>
         <br/>
         <h:link outcome="donutChart" value="Donut Chart example"/>
+        <br/>
+        <h:link outcome="breadCrumb" value="Bread Crumb example"/>
 
     </h:body>
 </html>
