Panel Menu example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -35,6 +35,8 @@
         <h:link outcome="donutChart" value="Donut Chart example"/>
         <br/>
         <h:link outcome="breadCrumb" value="Bread Crumb example"/>
+        <br/>
+        <h:link outcome="panelMenu" value="Panel Menu example"/>
 
     </h:body>
 </html>
