Context Menu example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -37,6 +37,8 @@
         <h:link outcome="breadCrumb" value="Bread Crumb example"/>
         <br/>
         <h:link outcome="panelMenu" value="Panel Menu example"/>
-
+        <br/>
+        <h:link outcome="contextMenu" value="Context Menu example"/>
+        
     </h:body>
 </html>
