Slide Menu example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,7 +5,7 @@
     <h:head>
         <title>YT Tutorial</title>    
     </h:head>
-    <h:body>
+    <h:body style="padding: 5px; letter-spacing: 1px; line-height: 30px">
         Hello in Tutorial
         <br/>
         <h:link outcome="inputText" value="Input text example"/>
@@ -39,6 +39,8 @@
         <h:link outcome="panelMenu" value="Panel Menu example"/>
         <br/>
         <h:link outcome="contextMenu" value="Context Menu example"/>
+        <br/>
+        <h:link outcome="slideMenu" value="Slide Menu example"/>
         
     </h:body>
 </html>
