Dock Menu example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -41,6 +41,7 @@
         <h:link outcome="contextMenu" value="Context Menu example"/>
         <br/>
         <h:link outcome="slideMenu" value="Slide Menu example"/>
-        
+        <br/>
+        <h:link outcome="dockMenu" value="Dock Menu example"/>
     </h:body>
 </html>
