Stack Menu example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -43,5 +43,7 @@
         <h:link outcome="slideMenu" value="Slide Menu example"/>
         <br/>
         <h:link outcome="dockMenu" value="Dock Menu example"/>
+        <br/>
+        <h:link outcome="stackMenu" value="Stack Menu example"/>
     </h:body>
 </html>
