--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -45,5 +45,7 @@
         <h:link outcome="dockMenu" value="Dock Menu example"/>
         <br/>
         <h:link outcome="stackMenu" value="Stack Menu example"/>
+        <br/>
+        <h:link outcome="megaMenu" value="Mega Menu example"/>
     </h:body>
 </html>
