Step Menu example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -47,5 +47,7 @@
         <h:link outcome="stackMenu" value="Stack Menu example"/>
         <br/>
         <h:link outcome="megaMenu" value="Mega Menu example"/>
+        <br/>
+        <h:link outcome="stepMenu" value="Step Menu example"/>
     </h:body>
 </html>
