--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -49,5 +49,7 @@
         <h:link outcome="megaMenu" value="Mega Menu example"/>
         <br/>
         <h:link outcome="stepMenu" value="Step Menu example"/>
+        <br/>
+        <h:link outcome="menu" value="Menu example"/>
     </h:body>
 </html>
