Tab Menu example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -51,5 +51,7 @@
         <h:link outcome="stepMenu" value="Step Menu example"/>
         <br/>
         <h:link outcome="menu" value="Menu example"/>
+        <br/>
+        <h:link outcome="tabMenu" value="Tab Menu example"/>
     </h:body>
 </html>
