Bar Menu example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -53,5 +53,7 @@
         <h:link outcome="menu" value="Menu example"/>
         <br/>
         <h:link outcome="tabMenu" value="Tab Menu example"/>
+        <br/>
+        <h:link outcome="barMenu" value="Bar Menu example"/>
     </h:body>
 </html>
