Tiered Menu example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -55,5 +55,7 @@
         <h:link outcome="tabMenu" value="Tab Menu example"/>
         <br/>
         <h:link outcome="barMenu" value="Bar Menu example"/>
+        <br/>
+        <h:link outcome="tieredMenu" value="Tiered Menu example"/>
     </h:body>
 </html>
