--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -42,6 +42,7 @@
             </p:menu>
             <h3>Programtic aproach</h3>
             <p:menu model="#{menu.model}"/>
+            <h3>Menu Example 4</h3>
             <p:menu toggleable="true">
                 <p:submenu label="With Ajax">
                     <p:menuitem value="File" action="#{menu.file()}" update="message"/>
