Button Menu example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -57,5 +57,7 @@
         <h:link outcome="barMenu" value="Bar Menu example"/>
         <br/>
         <h:link outcome="tieredMenu" value="Tiered Menu example"/>
+        <br/>
+        <h:link outcome="buttonMenu" value="Button Menu example"/>
     </h:body>
 </html>
