Confirm dialog example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -59,5 +59,7 @@
         <h:link outcome="tieredMenu" value="Tiered Menu example"/>
         <br/>
         <h:link outcome="buttonMenu" value="Button Menu example"/>
+        <br/>
+        <h:link outcome="confirmDialog" value="Confirm Dialog example"/>
     </h:body>
 </html>
