Tool Tip example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -61,5 +61,7 @@
         <h:link outcome="buttonMenu" value="Button Menu example"/>
         <br/>
         <h:link outcome="confirmDialog" value="Confirm Dialog example"/>
+        <br/>
+        <h:link outcome="tooltip" value="Tool Tip example"/>
     </h:body>
 </html>
