Overlay Panel example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -63,5 +63,7 @@
         <h:link outcome="confirmDialog" value="Confirm Dialog example"/>
         <br/>
         <h:link outcome="tooltip" value="Tool Tip example"/>
+        <br/>
+        <h:link outcome="overlayPanel" value="Overlay Panel example"/>
     </h:body>
 </html>
