--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -65,5 +65,7 @@
         <h:link outcome="tooltip" value="Tool Tip example"/>
         <br/>
         <h:link outcome="overlayPanel" value="Overlay Panel example"/>
+        <br/>
+        <h:link outcome="dialog" value="Dialog example"/>
     </h:body>
 </html>
