Light Box example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -67,5 +67,7 @@
         <h:link outcome="overlayPanel" value="Overlay Panel example"/>
         <br/>
         <h:link outcome="dialog" value="Dialog example"/>
+        <br/>
+        <h:link outcome="lightBox" value="Light Box example"/>
     </h:body>
 </html>
