Side Bar example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -69,5 +69,7 @@
         <h:link outcome="dialog" value="Dialog example"/>
         <br/>
         <h:link outcome="lightBox" value="Light Box example"/>
+        <br/>
+        <h:link outcome="sideBar" value="Side Bar example"/>
     </h:body>
 </html>
