--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -71,5 +71,7 @@
         <h:link outcome="lightBox" value="Light Box example"/>
         <br/>
         <h:link outcome="sideBar" value="Side Bar example"/>
+        <br/>
+        <h:link outcome="ajaxListener" value="Ajax Listener example"/>
     </h:body>
 </html>
