Patrial Submit example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -73,5 +73,7 @@
         <h:link outcome="sideBar" value="Side Bar example"/>
         <br/>
         <h:link outcome="ajaxListener" value="Ajax Listener example"/>
+        <br/>
+        <h:link outcome="patrialSubmit" value="Patrial Submit example"/>
     </h:body>
 </html>
