Selector Ajax example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -75,5 +75,7 @@
         <h:link outcome="ajaxListener" value="Ajax Listener example"/>
         <br/>
         <h:link outcome="patrialSubmit" value="Patrial Submit example"/>
+        <br/>
+        <h:link outcome="ajaxSelector" value="Ajax Selector example"/>
     </h:body>
 </html>
