--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -77,5 +77,7 @@
         <h:link outcome="patrialSubmit" value="Patrial Submit example"/>
         <br/>
         <h:link outcome="ajaxSelector" value="Ajax Selector example"/>
+        <br/>
+        <h:link outcome="ajaxProces" value="Ajax Process example"/>
     </h:body>
 </html>
