Search Ajax example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -79,5 +79,7 @@
         <h:link outcome="ajaxSelector" value="Ajax Selector example"/>
         <br/>
         <h:link outcome="ajaxProces" value="Ajax Process example"/>
+        <br/>
+        <h:link outcome="ajaxSearch" value="Ajax Search example"/>
     </h:body>
 </html>
