Validation Ajax example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -81,5 +81,7 @@
         <h:link outcome="ajaxProces" value="Ajax Process example"/>
         <br/>
         <h:link outcome="ajaxSearch" value="Ajax Search example"/>
+        <br/>
+        <h:link outcome="ajaxValidation" value="Ajax Validation example"/>
     </h:body>
 </html>
