Pool Ajax example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -82,6 +82,6 @@
         <br/>
         <h:link outcome="ajaxSearch" value="Ajax Search example"/>
         <br/>
-        <h:link outcome="ajaxValidation" value="Ajax Validation example"/>
+        <h:link outcome="ajaxPool" value="Ajax Pool example"/>
     </h:body>
 </html>
