Status Ajax example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -83,5 +83,7 @@
         <h:link outcome="ajaxSearch" value="Ajax Search example"/>
         <br/>
         <h:link outcome="ajaxPool" value="Ajax Pool example"/>
+        <br/>
+        <h:link outcome="ajaxStatus" value="Ajax Status example"/>
     </h:body>
 </html>
