Remote Command Ajax example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -85,5 +85,7 @@
         <h:link outcome="ajaxPool" value="Ajax Pool example"/>
         <br/>
         <h:link outcome="ajaxStatus" value="Ajax Status example"/>
+        <br/>
+        <h:link outcome="ajaxCommand" value="Ajax Command example"/>
     </h:body>
 </html>
