Fragment Ajax example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -87,5 +87,7 @@
         <h:link outcome="ajaxStatus" value="Ajax Status example"/>
         <br/>
         <h:link outcome="ajaxCommand" value="Ajax Command example"/>
+        <br/>
+        <h:link outcome="ajaxFragment" value="Ajax Fragment example"/>
     </h:body>
 </html>
