DropDown Ajax example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -89,5 +89,7 @@
         <h:link outcome="ajaxCommand" value="Ajax Command example"/>
         <br/>
         <h:link outcome="ajaxFragment" value="Ajax Fragment example"/>
+        <br/>
+        <h:link outcome="ajaxDropDown" value="Ajax Drop Down example"/>
     </h:body>
 </html>
