Chips example. (Dont work correct)
To fix letter.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -91,5 +91,7 @@
         <h:link outcome="ajaxFragment" value="Ajax Fragment example"/>
         <br/>
         <h:link outcome="ajaxDropDown" value="Ajax Drop Down example"/>
+        <br/>
+        <h:link outcome="chips" value="Chips example"/>
     </h:body>
 </html>
