Toggle Switch example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -93,5 +93,7 @@
         <h:link outcome="ajaxDropDown" value="Ajax Drop Down example"/>
         <br/>
         <h:link outcome="chips" value="Chips example"/>
+        <br/>
+        <h:link outcome="toggleSwitch" value="Toggle Switch example"/>
     </h:body>
 </html>
