Multi List Slect Box example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -95,5 +95,7 @@
         <h:link outcome="chips" value="Chips example"/>
         <br/>
         <h:link outcome="toggleSwitch" value="Toggle Switch example"/>
+        <br/>
+        <h:link outcome="multiListSelectBox" value="Multi Select Value example"/>
     </h:body>
 </html>
