--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -97,5 +97,7 @@
         <h:link outcome="toggleSwitch" value="Toggle Switch example"/>
         <br/>
         <h:link outcome="multiListSelectBox" value="Multi Select Value example"/>
+        <br/>
+        <h:link outcome="selectManyCheckBox" value="Select Many Check Box example"/>
     </h:body>
 </html>
