--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -99,5 +99,7 @@
         <h:link outcome="multiListSelectBox" value="Multi Select Value example"/>
         <br/>
         <h:link outcome="selectManyCheckBox" value="Select Many Check Box example"/>
+        <br/>
+        <h:link outcome="datePicker" value="Date Picker example"/>
     </h:body>
 </html>
