--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -101,5 +101,7 @@
         <h:link outcome="selectManyCheckBox" value="Select Many Check Box example"/>
         <br/>
         <h:link outcome="datePicker" value="Date Picker example"/>
+        <br/>
+        <h:link outcome="signature" value="Signature example"/>
     </h:body>
 </html>
