Color Picker example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -103,5 +103,7 @@
         <h:link outcome="datePicker" value="Date Picker example"/>
         <br/>
         <h:link outcome="signature" value="Signature example"/>
+        <br/>
+        <h:link outcome="colorPicker" value="Color Picker example"/>
     </h:body>
 </html>
