--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -105,5 +105,7 @@
         <h:link outcome="signature" value="Signature example"/>
         <br/>
         <h:link outcome="colorPicker" value="Color Picker example"/>
+        <br/>
+        <h:link outcome="inplace" value="Inplace example"/>
     </h:body>
 </html>
