--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -107,5 +107,7 @@
         <h:link outcome="colorPicker" value="Color Picker example"/>
         <br/>
         <h:link outcome="inplace" value="Inplace example"/>
+        <br/>
+        <h:link outcome="rating" value="Rating example"/>
     </h:body>
 </html>
