Primeicons and Buttons example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -109,5 +109,7 @@
         <h:link outcome="inplace" value="Inplace example"/>
         <br/>
         <h:link outcome="rating" value="Rating example"/>
+        <br/>
+        <h:link outcome="primeIcon" value="Prime Icon and Buttons example"/>
     </h:body>
 </html>
