--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -111,5 +111,7 @@
         <h:link outcome="rating" value="Rating example"/>
         <br/>
         <h:link outcome="primeIcon" value="Prime Icon and Buttons example"/>
+        <br/>
+        <h:link outcome="terminal" value="Terminal example"/>
     </h:body>
 </html>
