--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -113,5 +113,7 @@
         <h:link outcome="primeIcon" value="Prime Icon and Buttons example"/>
         <br/>
         <h:link outcome="terminal" value="Terminal example"/>
+        <br/>
+        <h:link outcome="sticky" value="Sticky example"/>
     </h:body>
 </html>
