--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -115,5 +115,7 @@
         <h:link outcome="terminal" value="Terminal example"/>
         <br/>
         <h:link outcome="sticky" value="Sticky example"/>
+        <br/>
+        <h:link outcome="spotlight" value="SpotLight example"/>
     </h:body>
 </html>
