Idle Monitor example.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -117,5 +117,7 @@
         <h:link outcome="sticky" value="Sticky example"/>
         <br/>
         <h:link outcome="spotlight" value="SpotLight example"/>
+        <br/>
+        <h:link outcome="idleMonitor" value="Idle Monitor example"/>
     </h:body>
 </html>
