--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -119,5 +119,7 @@
         <h:link outcome="spotlight" value="SpotLight example"/>
         <br/>
         <h:link outcome="idleMonitor" value="Idle Monitor example"/>
+        <br/>
+        <h:link outcome="spacer" value="Spacer example"/>
     </h:body>
 </html>
